# h5_yaml

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/h5_yaml/: conf_from_yaml.py  yaml_h5py.py  yaml_nc.py  yaml_nc4.py
src/h5_yaml/Data/: h5_testing.yaml
src/h5yaml/: __init__.py  conf_from_yaml.py  h5_create.py  nc_create.py  nc_from_yaml.py  read_nc_yaml.py  template.py  template_h5.py  template_nc.py  tex_from_yaml.py  yaml_h5.py  yaml_h5py.py  yaml_nc.py  yaml_to_h5.py  yaml_to_nc.py
src/h5yaml/Data/: h5_compound.yaml  h5_global_attrs.yaml  h5_testing.yaml  h5_unsupported.yaml  nc_testing.yaml  tex_table.yaml
src/h5yaml/lib/: __init__.py  adjust_attr.py  chunksizes.py  safe_eval.py
tests/: test_from_yaml.py  test_from_yaml_h5.py  test_from_yaml_nc.py  test_lib_mods.py  test_read_nc_yaml.py  test_template.py  test_template_h5.py  test_template_nc.py  test_yaml_h5.py  test_yaml_nc.py  test_yaml_to_h5.py  test_yaml_to_nc.py
