# pyproject.toml
[build-system]
requires = [
   "hatchling",
   "versioningit",
]
build-backend = "hatchling.build"

[project]
name = "h5yaml"
description = "Generate and design netCDF4 files using a YAML configuration file."
readme = "README.md"
authors = [
  {name = "Richard van Hees", email = "r.m.van.hees@sron.nl"}
]
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Operating System :: OS Independent",
   "Programming Language :: Python :: 3 :: Only",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.14",
]
keywords = [
   "HDF5", "netCDF4", "YAML", "CF metadata"
]
dynamic = [
   "version",
]
dependencies = [
   "h5py>=3.14",
   "netCDF4>=1.7",
   "numpy>=2.0",
   "pyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest >= 9.0"]
test = ["pytest-cov >= 7.0"]

[project.scripts]

[project.urls]
Homepage = "https://github.com/rmvanhees/h5_yaml"
Source = "https://github.com/rmvanhees/h5_yaml"
Issues = "https://github.com/rmvanhees/h5_yaml/issues"
# Changelog = "https://github.com/rmvanhees/h5_yaml/ChangeLog"
# Documentation = "https://h5_yaml.readthedocs.io/en/stable/"

[tool.hatch.build.targets.wheel]
packages = ["src/h5yaml"]

[tool.hatch.build.targets.sdist]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0"

[tool.versioningit.write]
file = "src/h5yaml/_version.py"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--import-mode=importlib --cov=h5yaml --cov-report=xml --cov-report=term"
strict = true

[tool.coverage.run]
# branch = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
preview = false
select = [
   "D",    # pydocstyle
   "E",    # pycodestyle
   "F",    # pyflakes
   "I",    # isort
   "N",    # pep8-naming
   "W",    # pycodestyle
   "ANN",  # flake8-annotations
   "A",    # flake8-builtins
   "B",    # flake8-bugbear
   "C4",   # flake8-comprehensions
   "ISC",  # flake8-implicit-str-concat
   "PGH",  # flake8-pie
   "PT",   # flake8-pytest-style
   "PYI",  # flake8-pyi
   "Q",    # flake8-quotes
   "S",    # flake8-bandit
   "SIM",  # flake8-simplify
   "TID",  # flake8-tidy-imports
   "TCH",  # flake8-type-checking
   "NPY",  # NumPy-specific
   "PERF", # Perflint
   "RUF",  # Ruff Specific
   "UP",   # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
